error-image correctly set for the version mobile

--- a/src/components/Error/style.scss
+++ b/src/components/Error/style.scss
@@ -12,7 +12,8 @@ img.ui.image.error-image {
   margin-bottom: 3em;
   transform:scale(1, 1);
   transition: 0.15s;
-
+  object-fit: cover;
+  
   &:hover {
     transform:scale(1.5, 1.5);
   }
